--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/Loading.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "NODE_ENV=production webpack",
+    "build": "cross-env NODE_ENV=production webpack",
     "prepublish": " npm run clean & npm run build"
   },
   "peerDependencies": {
@@ -33,6 +33,7 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
+    "cross-env": "1.0.7",
     "css-loader": "0.23.1",
     "rimraf": "2.5.2",
     "style-loader": "0.13.1",
