--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-component-loading",
-  "version": "0.0.1",
-  "description": "React component for loading",
+  "version": "0.0.2",
+  "description": "React Loading Component",
   "main": "dist/Loading.js",
   "scripts": {
     "clean": "rimraf dist",
